2002-06-01  Malcolm Tredinnick <malcolm@commsecure.com.au>
	* doc/reference/libgnome-sections.txt,
	  doc/reference/tmpl/gnome-score.sgml, libgnome/gnome-score.c,
	  libgnome/gnome-score.h:
	  Finally worked out why gnome_score_get_notable() was not being
	  included in the documentation and fixed that problem (stoopid
	  gtk-doc).

	* libgnome/gnome-gconf.c: Fixed a problem with not using &lt;
	  entities in one of the functions. Kills a build warning, too.

	* libgnome/gnome-i18n.c: Fixed a couple of typos.

2002-05-31  Malcolm Tredinnick <malcolm@commsecure.com.au>
	* doc/reference/tmpl/gnome-init.sgml: Add a short description.

	* help-converters/docbook/docbook/*/.cvsignore: Remove useless
	.cvsignore files so that these directories are now truly empty and can
	be pruned.

2002-05-30  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* libgnome/gnome-config.c, libgnome/gnome-help.c,
          libgnome/gnome-help.h, libgnome/gnome-init.c,
	  libgnome/gnome-program.c, libgnome/gnome-program.h,
	  libgnome/gnome-url.c, libgnome/gnome-util.c,
	  doc/reference/libgnome-docs.sgml,
	  doc/reference/libgnome-sections.txt,
	  doc/reference/tmpl/gnome-config.sgml,
	  doc/reference/tmpl/gnome-help.sgml,
	  doc/reference/tmpl/gnome-init.sgml,
	  doc/reference/tmpl/gnome-program.sgml,
	  doc/reference/tmpl/gnome-url.sgml: API documentation updates.
	  This brings libgnome up to 100% documented with nothing left
	  in *-unused.txt.

	* .cvsignore: Learn to spell 'hierarchy' so that the correct
	  file is ignored.

	* libgnome.hierarchy: Removed. This is autogenerated and empty
	  for libgnome.

2002-05-27  Havoc Pennington  <hp@pobox.com>

	* schemas/desktop_gnome_applications_window_manager.schemas:
	specify the type of elements of the list

2002-05-27  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 1.117.2

2002-05-23  Federico Mena Quintero  <federico@ximian.com>

	* help-converters/man/gnome-man2html.c (scan_troff): Do not