@@ -505,10 +505,10 @@ access_config (access_type mode, const char *section_name,
 	return def;
 }
 
-/* an extended version of access_config for looking up values in ~/.gnome.
+/* an extended version of access_config for looking up values in ~/.gnome2.
  * For writes it falls through to the standard behaviour.
  * For lookups, it first checks for the value in
- * $(datadir)/gnome/config-override, and if it isn't there in ~/.gnome,
+ * $(datadir)/gnome/config-override, and if it isn't there in ~/.gnome2,
  * then checks $(datadir)/gnome/config, and as a last fallback uses def.
  * This gives system administrators high level control over the default
  * configuration values for GNOME
