@@ -1,3 +1,13 @@
+2002-06-02  Malcolm Tredinnick <malcolm@commsecure.com.au>
+	* doc/reference/tmpl/gnome-config.sgml,
+	  doc/reference/tmpl/gnome-util.sgml, libgnome/gnome-config.c,
+	  libgnome/gnome-util.h: Replace .gnome with .gnome2 in a couple
+	  of places in case people are wanting to poke around $HOME for
+	  examples while reading the docs.
+
+	* doc/reference/tmpl/gnome-util.sgml: Fix the "Returns"
+	  parameter for gnome_util_prepend_user_home().
+
 2002-06-01  Malcolm Tredinnick <malcolm@commsecure.com.au>
 	* doc/reference/libgnome-sections.txt,
 	  doc/reference/tmpl/gnome-score.sgml, libgnome/gnome-score.c,
